# outbreak-origins-server

./: .env  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  diesel.toml  docker-compose.yml  entrypoint.sh
.github/workflows/: check-commit.yml  rust-checks.yml
db/: Cargo.toml
db/migrations/2021-12-28-070144_create_tables/: up.sql
db/src/: lib.rs  models.rs  schema.rs
migrations/2021-11-04-151239_users/: up.sql
migrations/2021-12-28-140044_add_email_user/: down.sql  up.sql
migrations/2021-12-31-104716_create_game_tables/: down.sql  up.sql
migrations/2022-01-15-105432_remove_username_add_first_and_last_name/: down.sql  up.sql
migrations/2022-01-22-165706_add_score_to_users/: down.sql  up.sql
migrations/2022-02-02-080815_add_money_to_users/: down.sql  up.sql
migrations/2022-02-08-135831_add_control_levels_to_user/: down.sql  up.sql
migrations/2022-02-13-102050_set_default_value_for_current_event/: down.sql  up.sql
migrations/2022-02-15-061505_add_token_to_users/: down.sql  up.sql
migrations/2022-02-16-173021_add_is_email_verified_to_users/: down.sql  up.sql
migrations/2022-02-20-135454_user_default_level_1/: down.sql  up.sql
migrations/2022-02-25-121044_add_date_to_status/: down.sql  up.sql
migrations/2022-03-01-132659_default_current_event_1/: down.sql  up.sql
migrations/2022-03-04-174614_add_is_active_to_user/: down.sql  up.sql
migrations/2022-03-07-083846_add_level_type_users/: down.sql  up.sql
migrations/2022-03-08-095307_retryAttempts/: down.sql  up.sql
migrations/2022-03-08-100219_add_is_level_active/: down.sql  up.sql
migrations/2022-03-09-105326_add_current_level_score/: down.sql  up.sql
src/: actions.rs  actor.rs  auth.rs  db.rs  game.rs  init_data.json  leaderboard.rs  level_details.rs  levels.rs  main.rs  middleware.rs  models.rs  playerstats.rs  routes.rs  schema.rs  utils.rs
src/actor/: controllers.rs  implementation.rs  routes.rs  types.rs  utils.rs
src/actor/events/: types.rs  utils.rs
src/auth/: controllers.rs  error.rs  extractors.rs  middleware.rs  response.rs  routes.rs  utils.rs
src/db/: events.rs  mod.rs  models.rs  schema.rs  types.rs  utils.rs
src/db/models/: auth.rs  events.rs  jwt.rs  status.rs  user.rs
src/game/: controllers.rs  requests.rs  response.rs  routes.rs  utils.rs
src/leaderboard/: controllers.rs  response.rs  routes.rs  tests.rs
src/levels/: controllers.rs  levelDetails.json  requests.rs  response.rs  routes.rs
src/models/: auth.rs  jwt.rs  mod.rs  types.rs  user.rs
src/playerstats/: controllers.rs  response.rs  routes.rs
src/tests/: utils.rs
src/utils/: functions.rs  helpers.rs  types.rs
static/: index.html
test-manager/: Cargo.toml
test-manager/src/: lib.rs
virus-simulator/: Cargo.toml
virus-simulator/src/: lib.rs
(+25 files in other folders)
