[package]
name = "outbreak-origins-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virus_simulator = { path = "virus-simulator"}

diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "*"

actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"