[package]
name = "outbreak-origins-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jsonwebtoken = "7.2.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
bcrypt = "0.10"
actix-cors = "0.5.4"
actix-identity = "0.3.1"
chrono = "0.4"
futures = "0.3.19"
virus_simulator = { path = "virus-simulator"}
diesel = { version = "1.4.4", features = ["postgres",  "serde_json"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "*"
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
thiserror = "1.0.30"
actix-rt = "1.1.1"
test_manager = { path = "test-manager" }
strum_macros = "0.23.1"
sendgrid = "0.17.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-appender = "0.2"
tracing-actix-web = "0.2.1"
rand = "0.8.5"
magic-crypt = "3.1.9"
